--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "mocha",
     "watch": "babel src/index.js --out-file index.js --watch"
   },
+  "bin": {
+    "cartodb-export": "./bin/cartodb-export.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ebrelsford/cartodb-export.git"
@@ -29,6 +32,7 @@
     "mocha": "^2.2.5"
   },
   "dependencies": {
+    "commander": "^2.8.1",
     "mkdirp": "^0.5.1",
     "request": "^2.60.0"
   }
