--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "dependencies": {
     "mkdirp": "^0.5.1",
-    "request": "^2.60.0"
+    "request": "^2.60.0",
+    "sql-parser": "^0.5.0",
+    "underscore": "^1.8.3"
   }
 }
