--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mocha": "^2.2.5"
   },
   "dependencies": {
+    "commander": "^2.9.0",
     "mkdirp": "^0.5.1",
     "request": "^2.60.0",
     "sql-parser": "^0.5.0",
