--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   "devDependencies": {
     "babel": "^5.8.21",
     "chai": "^3.2.0",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "temp": "^0.8.3"
   },
   "dependencies": {
+    "async": "^1.4.2",
     "commander": "^2.9.0",
     "mkdirp": "^0.5.1",
     "request": "^2.60.0",
