--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "async": "^1.4.2",
     "commander": "^2.9.0",
     "mkdirp": "^0.5.1",
+    "progress": "^1.1.8",
     "request": "^2.60.0",
     "sql-parser": "^0.5.0",
     "underscore": "^1.8.3"
